# twig

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
csubst/: index.html
docs/: csubst.md  index.md  installation.md  macse-align.md  macse-prep.md  macse-refine.md  quick-guide.md  tree-filter.md
installation/: index.html
macse-align/: index.html
macse-prep/: index.html
macse-refine/: index.html
quick-guide/: index.html
search/: search_index.json
src/twig/: __init__.py
src/twig/cli/: main.py  subcommands.py
src/twig/hgt/: __init__.py  alien_index.py  alien_tree.py
src/twig/seqlab/: __init__.py  align_cds.py  align_post.py  align_pre.py  consensus_fasta.py  csubst.py  diamond_bl.py  diamond_bl_annotate.py  diamond_blast_all.py  diamond_blastp.py  diamond_blastp_all.py  diamond_pw.py  filter_concat.py  isoform_prune.py  macse.py  macse_align.py  macse_prep.py  macse_refine.py  macse_trim.py  partition_cds.py
src/twig/synteny/: __init__.py  format_fasta.py  format_genome.py  format_gff.py  genome_table.py
src/twig/treelab/: __init__.py  tree_filter.py  tree_rooter.py  tree_skeleton.py
src/twig/utils/: __init__.py  exceptions.py  logger_setup.py  parallel.py  path_utils.py
tree-filter/: index.html
